--- a/summary.tex
+++ b/summary.tex
@@ -477,7 +477,7 @@ features & algorithm performance & 11 regression algorithms & offline & static\\
 \citeA{kanda_meta-learning_2012} & TSP & instance features & ranking & neural
 networks & offline & static\\
 
-\citeA{kadioglu_non-model-based_2012} & MIP & instance features & heuristic &
+\citeA{kadioglu_non-model-based_2012} & MIP & instance features & algorithm &
 clustering & online & static\\
 
 \citeA{seipp_learning_2012} & planning & past performance & resource allocation
@@ -489,6 +489,9 @@ features & algorithm & classification & offline & static\\
 \citeA{munoz_meta-learning_2012} & optimisation & instance features, algorithm
 parameters & runtime performance & neural network regression & offline &
 static\\
+
+\citeA{park_using_2012} & software design & instance features & runtime
+performance & SVM & offline & static\\
 
 % 2013
 
@@ -546,8 +549,11 @@ static\\
 \citeA{yuen_which_2013} & evolutionary algorithms & past performance & algorithm
 & linear regression & online & static\\
 
-\citeA{loth_bandit-based_2013} & constraint programming & past performance &
+\citeA{loth_bandit-based_2013} & constraints & past performance &
 algorithm & reinforcement learning & online & static\\
+
+\citeA{simon_automatic_2013} & software design & instance features & algorithm &
+neural networks, decision trees & offline & dynamic\\
 
 % 2014
 
@@ -643,7 +649,7 @@ algorithm & reinforcement learning & online & static\\
 \citeA{oentaryo_algorithm_2015} & SAT & instance features and past performance &
 ranking & stochastic optimisation & offline & static\\
 
-\citeA{chu_learning_2015} & constraints & instance features & heuristic &
+\citeA{chu_learning_2015} & constraints & instance features & algorithm &
 partial least squares regression & offline & static\\
 
 \citeA{balafrej_multi-armed_2015} & constraints & past performance & propagation
