--- a/survey.bib
+++ b/survey.bib
@@ -2421,3 +2421,19 @@
 	year = {2015},
 	pages = {187--196}
 }
+
+@inproceedings{simon_automatic_2013,
+	title = {Automatic {Construction} of {Inlining} {Heuristics} {Using} {Machine} {Learning}},
+	booktitle = {{IEEE}/{ACM} {International} {Symposium} on {Code} {Generation} and {Optimization} ({CGO})},
+	author = {Simon, Douglas and Cavazos, John and Wimmer, Christian and Kulkarni, Sameer},
+	year = {2013},
+	pages = {1--12}
+}
+
+@inproceedings{park_using_2012,
+	title = {Using {Graph}-based {Program} {Characterization} for {Predictive} {Modeling}},
+	booktitle = {10th {International} {Symposium} on {Code} {Generation} and {Optimization}},
+	author = {Park, Eunjung and Cavazos, John and Alvarez, Marco A.},
+	year = {2012},
+	pages = {196--206}
+}
