--- a/summary.tex
+++ b/summary.tex
@@ -506,7 +506,7 @@ algorithm & clustering & offline & static\\
 parameters & algorithm performance & random forests, linear regression, neural
 networks, Gaussian processes, regression trees & offline & static\\
 
-\citeA{musliu_algorithm_2013} & graph coloring & instance features & algorithm &
+\citeA{musliu_algorithm_2013} & graph colouring & instance features & algorithm &
 six classifiers & offline & static\\
 
 \citeA{amadini_empirical_2013} & constraints & instance features & algorithm &
