--- a/summary.tex
+++ b/summary.tex
@@ -444,6 +444,9 @@ self-organizing map, decision tree, neural network & offline & static\\
 \citeA{jankowski_selecting_2011} & machine learning & instance features &
 ranking & nearest neighbour & offline & static\\
 
+\citeA{hoffman_portfolio_2011} & Bayesian Optimization & past performance &
+algorithm & multi-armed bandits & online & static\\
+
 % 2012
 
 \citeA{kotthoff_hybrid_2012} & SAT, QBF, constraints & instance features,
@@ -626,6 +629,15 @@ resource allocation & lots & offline & static\\
 \citeA{hoos_claspfolio_2014} & ASP & instance features & resource allocation &
 pairwise classification, regression, clustering & offline & static\\
 
+\citeA{sukhija_portfolio-based_2014} & loop scheduling & instance features &
+algorithm & classification & offline & static\\
+
+\citeA{stojadinovic_instance-based_2014} & CSP & instance features & algorithm &
+nearest neighbour & offline & static\\
+
+\citeA{shahriari_entropy_2014} & Bayesian Optimization & entropy & algorithm &
+multi-armed bandits & online & static\\
+
 % 2015
 
 \citeA{tierney_algorithm_2015} & container premarshalling & instance features,
@@ -636,9 +648,9 @@ past performance & algorithm & hierarchical cost-sensitive clustering & offline
 instance features & resource allocation & random forest pairwise classification,
 ridge regression, k-means clustering & offline & static\\
 
-\citeA{lindauer_autofolio_2015} & aslib 1.0 & instance features & resource
-allocation & pairwise classification, regression, clustering & offline &
-static\\
+\citeA{lindauer_autofolio_2015,lindauer_autofolio_2015-1} & ASlib & instance
+features & resource allocation & pairwise classification, regression, clustering
+& offline & static\\
 
 \citeA{kotthoff_improving_2015} & TSP & instance features & algorithm &
 classification, regression, pairwise regression & offline & static\\
@@ -657,6 +669,19 @@ method & multi-armed bandits & online & static\\
 
 \citeA{luo_fast_2015} & stencil computation & instance features & solution space
 & multiple linear regression & offline & static\\
+
+\citeA{ilany_algorithm_2015} & multi-agent systems & instance features & runtime
+performance & linear regression, regression trees, neural network, multi-armed
+bandits & offline and online & static\\
+
+\citeA{everitt_analytical_2015,everitt_analytical_2015-1} & search & instance
+features & runtime performance & analytical model & offline & static\\
+
+\citeA{amadini_sunny_2015} & ASlib & instance features & resource allocation &
+nearest neighbour & offline & static\\
+
+\citeA{phillips_efficient_2015} & search & past performance & resource
+allocation & multi-armed bandits & online & static\\
 
 \end{longtable}
 \end{landscape}
