--- a/survey.bib
+++ b/survey.bib
@@ -2437,3 +2437,95 @@
 	year = {2012},
 	pages = {196--206}
 }
+
+@inproceedings{sukhija_portfolio-based_2014,
+	title = {Portfolio-{Based} {Selection} of {Robust} {Dynamic} {Loop} {Scheduling} {Algorithms} {Using} {Machine} {Learning}},
+	booktitle = {Parallel {Distributed} {Processing} {Symposium} {Workshops} ({IPDPSW}), 2014 {IEEE} {International}},
+	author = {Sukhija, Nitin and Malone, Brandon and Srivastava, Srishti and Banicescu, Ioana and Ciorba, Florina M.},
+	month = may,
+	year = {2014},
+	pages = {1638--1647}
+}
+
+@article{ilany_algorithm_2015,
+	title = {Algorithm selection in bilateral negotiation},
+	journal = {Autonomous Agents and Multi-Agent Systems},
+	author = {Ilany, Litan and Gal, Ya’akov},
+	year = {2015},
+	pages = {1--27}
+}
+
+@inproceedings{everitt_analytical_2015,
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {Analytical {Results} on the {BFS} vs. {DFS} {Algorithm} {Selection} {Problem}: {Part} {II}: {Graph} {Search}},
+	volume = {9457},
+	booktitle = {{AI} 2015: {Advances} in {Artificial} {Intelligence}},
+	publisher = {Springer International Publishing},
+	author = {Everitt, Tom and Hutter, Marcus},
+	year = {2015},
+	pages = {166--178}
+}
+
+@inproceedings{everitt_analytical_2015-1,
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {Analytical {Results} on the {BFS} vs. {DFS} {Algorithm} {Selection} {Problem}. {Part} {I}: {Tree} {Search}},
+	volume = {9457},
+	booktitle = {{AI} 2015: {Advances} in {Artificial} {Intelligence}},
+	publisher = {Springer International Publishing},
+	author = {Everitt, Tom and Hutter, Marcus},
+	year = {2015},
+	pages = {157--165}
+}
+
+@inproceedings{amadini_sunny_2015,
+	title = {{SUNNY} for algorithm selection: a preliminary study},
+	booktitle = {30th {Italian} {Conference} on {Computational} {Logic}},
+	author = {Amadini, Roberto and Biselli, Fabio and Gabbrielli, Maurizio and Liu, Tong and Mauro, Jacopo},
+	month = jul,
+	year = {2015},
+	pages = {202--206}
+}
+
+@article{lindauer_autofolio_2015-1,
+	title = {{AutoFolio}: {An} {Automatically} {Configured} {Algorithm} {Selector}},
+	volume = {53},
+	number = {1},
+	journal = {J. Artif. Int. Res.},
+	author = {Lindauer, Marius and Hoos, Holger H. and Hutter, Frank and Schaub, Torsten},
+	month = may,
+	year = {2015},
+	pages = {745--778}
+}
+
+@inproceedings{stojadinovic_instance-based_2014,
+	title = {Instance-based {Selection} of {CSP} {Solvers} using {Short} {Training}},
+	booktitle = {Fifth {Pragmatics} of {SAT} workshop},
+	author = {Stojadinović, Mirko and Marić, Filip},
+	month = jul,
+	year = {2014}
+}
+
+@inproceedings{phillips_efficient_2015,
+	title = {Efficient {Search} with an {Ensemble} of {Heuristics}},
+	booktitle = {Twenty-{Fourth} {International} {Joint} {Conference} on {Artificial} {Intelligence}},
+	author = {Phillips, Mike and Narayanan, Venkatraman and Aine, Sandip and Likhachev, Maxim},
+	month = jul,
+	year = {2015},
+	pages = {784--791}
+}
+
+@inproceedings{hoffman_portfolio_2011,
+	title = {Portfolio allocation for {Bayesian} optimization},
+	booktitle = {{UAI}},
+	author = {Hoffman, Matthew and Brochu, Eric and Freitas, Nando de},
+	year = {2011},
+	pages = {327--336}
+}
+
+@techreport{shahriari_entropy_2014,
+	title = {An {Entropy} {Search} {Portfolio} for {Bayesian} {Optimization}},
+	number = {arXiv:1406.4625},
+	institution = {University of Oxford},
+	author = {Shahriari, Bobak and Wang, Ziyu and Hoffman, Matthew W. and Bouchard-Cote, Alexandre and Freitas, Nando de},
+	year = {2014}
+}
