--- a/summary.tex
+++ b/summary.tex
@@ -496,6 +496,9 @@ static\\
 \citeA{park_using_2012} & software design & instance features & runtime
 performance & SVM & offline & static\\
 
+\citeA{morak_evaluating_2012} & ASP & instance features & algorithm &
+classification and regression & offline & static\\
+
 % 2013
 
 \citeA{sabharwal_boosting_2013} & SAT & instance features & resource allocation
@@ -558,6 +561,9 @@ algorithm & reinforcement learning & online & static\\
 \citeA{simon_automatic_2013} & software design & instance features & algorithm &
 neural networks, decision trees & offline & dynamic\\
 
+\citeA{geschwender_selecting_2013,geschwender_portfolio_2016} & constraints &
+instance features & algorithm & decision tree, neural network, naive Bayes & offline & static\\
+
 % 2014
 
 \citeA{amadini_portfolio_2014} & constraints & instance features & algorithm,
@@ -581,7 +587,8 @@ algorithm portfolio & optimisation & offline & dynamic\\
 \citeA{fawcett_improved_2014} & planning & instance features & runtime &
 regression & offline & static\\
 
-\citeA{amadini_sequential_2014} & COP & instance features & resource allocation
+\citeA{amadini_sequential_2014,amadini_sunny_2014,amadini_sunny-cp_2015,amadini_multicore_2015} &
+constraints & instance features & resource allocation
 & nearest neighbour & offline & static\\
 
 \citeA{blet_experimental_2014} & CSP & instance features & algorithm & M5P
@@ -607,9 +614,6 @@ static\\
 
 \citeA{garbajosa_planning_2014} & planning & instance features & algorithm &
 classifier ensemble & online & static\\
-
-\citeA{amadini_sunny_2014} & constraints & instance features & resource
-allocation & nearest neighbour & offline & static\\
 
 \citeA{pihera_application_2014} & TSP & instance features & algorithm & 5
 classifiers & offline & static\\
@@ -682,6 +686,40 @@ nearest neighbour & offline & static\\
 
 \citeA{phillips_efficient_2015} & search & past performance & resource
 allocation & multi-armed bandits & online & static\\
+
+\citeA{abseher_improving_2015} & tree decomposition & instance features &
+ranking & linear regression, nearest neighbour, regression trees, neural
+network, SVM & offline & static\\
+
+% 2016
+
+\citeA{palmieri_parallel_2016} & constraint programming & past performance &
+algorithm & statistical test & online & static\\
+
+\citeA{inala_synthesis_2016} & SMT & past performance & encoding & pattern
+matching & offline & dynamic\\
+
+\citeA{mendes_hyper-heuristic_2016} & games & instance features & algorithm &
+various classifiers & offline & static\\
+
+\citeA{bontrager_matching_2016} & games & instance features & algorithm &
+hierarchical clustering and decision trees & offline & static\\
+
+\citeA{koitz_improving_2016,koitz_exploiting_2016} & abductive diagnosis & instance features &
+algorithm & various classifiers & offline & static\\
+
+\citeA{minot_using_2016} & sum coloring problem & instance features & algorithm &
+hand-crafted rule & offline & static\\
+
+\citeA{kotthoff_portfolios_2016} & subgraph isomorphism & instance features &
+algorithm &  classification, regression, pairwise classification and regression
+& offline & static\\
+
+\citeA{degroote_reinforcement_2016} & ASlib & instance features & algorithm &
+random forest regression & online & static\\
+
+\citeA{gonard_algorithm_2016} & ASlib & instance features & resource allocation
+& random forest and nearest neighbour regression & offline & static\\
 
 \end{longtable}
 \end{landscape}
