--- a/survey.bib
+++ b/survey.bib
@@ -2529,3 +2529,135 @@
 	author = {Shahriari, Bobak and Wang, Ziyu and Hoffman, Matthew W. and Bouchard-Cote, Alexandre and Freitas, Nando de},
 	year = {2014}
 }
+
+@inproceedings{abseher_improving_2015,
+	title = {Improving the {Efficiency} of {Dynamic} {Programming} on {Tree} {Decompositions} via {Machine} {Learning}},
+	booktitle = {Proceedings of the 24th {International} {Conference} on {Artificial} {Intelligence}},
+	author = {Abseher, Michael and Dusberger, Frederico and Musliu, Nysret and Woltran, Stefan},
+	year = {2015},
+	pages = {275--282}
+}
+
+@inproceedings{palmieri_parallel_2016,
+	title = {Parallel {Strategies} {Selection}},
+	booktitle = {22nd {International} {Conference} on Principles and {Practice} of {Constraint} {Programming}},
+	author = {Palmieri, Anthony and R{\'e}gin, Jean-Charles and Schaus, Pierre},
+	year = {2016},
+	pages = {388--404}
+}
+
+@inproceedings{inala_synthesis_2016,
+	title = {Synthesis of {Domain} {Specific} {CNF} {Encoders} for {Bit}-{Vector} {Solvers}},
+	booktitle = {19th {International} {Conference} on {Theory} and {Applications} of {Satisfiability} {Testing}},
+	author = {Inala, Jeevana Priya and Singh, Rohit and Solar-Lezama, Armando},
+	year = {2016},
+	pages = {302--320}
+}
+
+@inproceedings{amadini_multicore_2015,
+	title = {A {Multicore} {Tool} for {Constraint} {Solving}},
+	booktitle = {Proceedings of the 24th {International} {Conference} on {Artificial} {Intelligence}},
+	author = {Amadini, Roberto and Gabbrielli, Maurizio and Mauro, Jacopo},
+	year = {2015},
+	pages = {232--238}
+}
+
+@inproceedings{amadini_sunny-cp_2015,
+	title = {{SUNNY}-{CP}: {A} {Sequential} {CP} {Portfolio} {Solver}},
+	booktitle = {Proceedings of the 30th {Annual} {ACM} {Symposium} on {Applied} {Computing}},
+	author = {Amadini, Roberto and Gabbrielli, Maurizio and Mauro, Jacopo},
+	year = {2015},
+	pages = {1861--1867}
+}
+
+@inproceedings{bontrager_matching_2016,
+	title = {Matching {Games} and {Algorithms} for {General} {Video} {Game} {Playing}},
+	booktitle = {Artificial {Intelligence} and {Interactive} {Digital} {Entertainment} ({AIIDE})},
+	author = {Bontrager, Philip and Khalifa, Ahmed and Mendes, Andre and Togelius, Julian},
+	year = {2016}
+}
+
+@inproceedings{mendes_hyper-heuristic_2016,
+	title = {Hyper-heuristic {General} {Video} {Game} {Playing}},
+	booktitle = {{IEEE} {Computational} {Intelligence} and {Games}},
+	author = {Mendes, Andre and Togelius, Julian and Nealen, Andy},
+	year = {2016}
+}
+
+@inproceedings{koitz_improving_2016,
+	title = {Improving {Abductive} {Diagnosis} {Through} {Structural} {Features}: {A} {Meta}-{Approach}},
+	volume = {Vol-1626},
+	booktitle = {Proceedings of the {International} {Workshop} on {Defeasible} and {Ampliative} {Reasoning} ({DARe}-16)},
+	publisher = {CEUR WS Proceedings},
+	author = {Koitz, Roxane and Wotawa, Franz},
+	month = sep,
+	year = {2016}
+}
+
+@inproceedings{minot_using_2016,
+	title = {Using {CP} and {ILP} with tree decomposition to solve the sum colouring problem},
+	booktitle = {Doctoral program of {CP} 2016},
+	author = {Minot, Ma{\"e}l and Ndiaye, Samba Ndojh and Solnon, Christine},
+	month = sep,
+	year = {2016}
+}
+
+@inproceedings{kotthoff_portfolios_2016,
+	title = {Portfolios of {Subgraph} {Isomorphism} {Algorithms}},
+	booktitle = {{LION} 10},
+	author = {Kotthoff, Lars and McCreesh, Ciaran and Solnon, Christine},
+	month = jun,
+	year = {2016}
+}
+
+@inproceedings{degroote_reinforcement_2016,
+	title = {Reinforcement {Learning} for {Automatic} {Online} {Algorithm} {Selection} - an {Empirical} {Study}},
+	volume = {1649},
+	booktitle = {{ITAT}},
+	publisher = {CEUR Workshop Proceedings},
+	author = {Degroote, Hans and Bischl, Bernd and Kotthoff, Lars and de Causmacker, Patrick},
+	month = sep,
+	year = {2016},
+	pages = {93--101}
+}
+
+@inproceedings{koitz_exploiting_2016,
+	title = {Exploiting {Structural} {Metrics} in {FMEA}-{Based} {Abductive} {Diagnosis}.},
+	booktitle = {Proceedings of the 27th {International} {Workshop} on {Principles} of {Diagnosis} ({DX})},
+	author = {Koitz, Roxane and Wotawa, Franz},
+	year = {2016},
+	pages = {1--7}
+}
+
+@inproceedings{morak_evaluating_2012,
+	address = {Berlin, Heidelberg},
+	title = {Evaluating {Tree}-{Decomposition} {Based} {Algorithms} for {Answer} {Set} {Programming}},
+	booktitle = {6th {International} {Conference} on {Learning} and {Intelligent} {Optimization}},
+	author = {Morak, Michael and Musliu, Nysret and Pichler, Reinhard and R{\"u}mmele, Stefan and Woltran, Stefan},
+	year = {2012},
+	pages = {130--144}
+}
+
+@inproceedings{gonard_algorithm_2016,
+	address = {Marrakech, Morocco},
+	title = {Algorithm {Selector} and {Prescheduler} in the {ICON} challenge},
+	booktitle = {International {Conference} on {Metaheuristics} and {Nature} {Inspired} {Computing} ({META}'2016)},
+	author = {Gonard, Fran{\,c}ois and Schoenauer, Marc and Sebag, Mich{\`e}le},
+	month = oct,
+	year = {2016}
+}
+
+@inproceedings{geschwender_portfolio_2016,
+	title = {A {Portfolio} {Approach} for {Enforcing} {Minimality} in a {Tree} {Decomposition}},
+	booktitle = {Doctoral program of {CP} 2016},
+	author = {Geschwender, Daniel J. and Woodward, Robert J. and Choueiry, Berthe Y. and Scott, Stephen D.},
+	year = {2016}
+}
+
+@inproceedings{geschwender_selecting_2013,
+	title = {Selecting the {Appropriate} {Consistency} {Algorithm} for {CSPs} {Using} {Machine} {Learning} {Classifiers}},
+	booktitle = {{AAAI}},
+	author = {Geschwender, Daniel J. and Karakashian, Shant and Woodward, Robert J. and Choueiry, Berthe Y. and Scott, Stephen D.},
+	year = {2013},
+	pages = {1611--1612}
+}
