--- a/summary.tex
+++ b/summary.tex
@@ -477,8 +477,9 @@ allocation & statistical model & offline and online & static\\
 \citeA{hutter_algorithm_2012,hutter_algorithm_2014} & SAT, MIP, TSP & instance
 features & algorithm performance & 11 regression algorithms & offline & static\\
 
-\citeA{kanda_meta-learning_2012} & TSP & instance features & ranking & neural
-networks & offline & static\\
+\citeA{kanda_meta-learning_2012,kanda_meta-learning_2016} & TSP & instance
+features & ranking & neural networks, nearest neighbour, clustering trees &
+offline & static\\
 
 \citeA{kadioglu_non-model-based_2012} & MIP & instance features & algorithm &
 clustering & online & static\\
@@ -720,6 +721,36 @@ random forest regression & online & static\\
 
 \citeA{gonard_algorithm_2016} & ASlib & instance features & resource allocation
 & random forest and nearest neighbour regression & offline & static\\
+
+\citeA{sidnev_hardware-specific_2016} & matrix multiplication, sorting, linear
+equations, FFT & instance features & runtime performance, algorithm & linear
+regression & offline & static\\
+
+\citeA{benatia_machine_2016} & sparse matrix-vector multiplication & instance
+features & runtime performance & SVM, neural network & offline & static\\
+
+\citeA{dutt_plan_2016} & database query processing & instance features & resource
+allocation & offline & static\\
+
+% 2017
+
+\citeA{misir_alors_2017} & ASlib & instance and algorithm features & ranking &
+matrix completion & offline & static\\
+
+\citeA{ansotegui_reactive_2017} & MaxSAT & instance features, past performance &
+algorithm & search & offline and online & dynamic\\
+
+\citeA{minot_combining_2017} & sum coloring problem & instance features &
+algorithm & pairwise random regression forests & offline & static\\
+
+\citeA{zaharija_cognitive_2017} & robotics & instance features & algorithm &
+hand-crafted rules & offline & static\\
+
+\citeA{wagner_improving_2017} & minimum vertex cover & instance features &
+algorithm & pairwise classification, regression, clustering & offline & static\\
+
+\citeA{chen_instance-specific_2017} & SAT, MaxSAT & instance features &
+algorithm & multi-output learning & offline & static\\
 
 \end{longtable}
 \end{landscape}
