--- a/survey.bib
+++ b/survey.bib
@@ -664,7 +664,7 @@
 @inproceedings{arbelaez_online_2009,
     title = {Online Heuristic Selection in Constraint Programming},
     booktitle = {Symposium on Combinatorial Search},
-    author = {Arbelaez, Alejandro and Hamadi, Youssef and Sebag, Michele},
+    author = {Arbelaez, Alejandro and Hamadi, Youssef and Sebag, Mich\`ele},
     year = {2009}
 }
 
@@ -1864,7 +1864,7 @@
 @inproceedings{arbelaez_continuous_2010,
 	title = {Continuous Search in Constraint Programming},
 	booktitle = {22nd {IEEE} International Conference on Tools with Artificial Intelligence},
-	author = {Arbelaez, Alejandro and Hamadi, Youssef and Sebag, Michele},
+	author = {Arbelaez, Alejandro and Hamadi, Youssef and Sebag, Mich\`ele},
 	year = {2010},
 	pages = {53--60}
 }
@@ -2660,4 +2660,96 @@
 	author = {Geschwender, Daniel J. and Karakashian, Shant and Woodward, Robert J. and Choueiry, Berthe Y. and Scott, Stephen D.},
 	year = {2013},
 	pages = {1611--1612}
+}
+
+@inproceedings{sidnev_hardware-specific_2016,
+	title = {Hardware-{Specific} {Selection} the {Most} {Fast}-{Running} {Software} {Components}},
+	booktitle = {Algorithms and {Architectures} for {Parallel} {Processing}: {ICA}3PP 2016 {Collocated} {Workshops}},
+	publisher = {Springer International Publishing},
+	author = {Sidnev, Alexey},
+	year = {2016},
+	pages = {354--364}
+}
+
+@article{misir_alors_2017,
+	title = {Alors: {An} algorithm recommender system},
+	volume = {244},
+	journal = {Artificial Intelligence},
+	author = {Mısır, Mustafa and Sebag, Mich\`ele},
+	year = {2017},
+	pages = {291--314}
+}
+
+@inproceedings{ansotegui_reactive_2017,
+	title = {Reactive {Dialectic} {Search} {Portfolios} for {MaxSAT}},
+	author = {Ansótegui, Carlos and Pon, Josep and Sellmann, Meinolf and Tierney, Kevin},
+	booktitle = {AAAI},
+	pages = {765--772},
+	year = {2017}
+}
+
+@inproceedings{benatia_machine_2016,
+	title = {Machine {Learning} {Approach} for the {Predicting} {Performance} of {SpMV} on {GPU}},
+	booktitle = {{IEEE} {International} {Conference} on {Parallel} and {Distributed} {Systems} ({ICPADS})},
+	author = {Benatia, Akrem and Ji, Weixing and Wang, Yizhuo and Shi, Feng},
+	month = dec,
+	year = {2016},
+	pages = {894--901}
+}
+
+@inproceedings{minot_combining_2017,
+	title = {Combining {CP} and {ILP} in a tree decomposition of bounded height for the sum colouring problem},
+	booktitle = {{CPAIOR}},
+	author = {Minot, Ma\"el and Ndiaye, Samba Ndojh and Solnon, Christine},
+	month = jun,
+	year = {2017}
+}
+
+@article{dutt_plan_2016,
+	title = {Plan {Bouquets}: {A} {Fragrant} {Approach} to {Robust} {Query} {Processing}},
+	volume = {41},
+	number = {2},
+	journal = {ACM Trans. Database Syst.},
+	author = {Dutt, Anshuman and Haritsa, Jayant R.},
+	month = may,
+	year = {2016},
+	pages = {11:1--11:37}
+}
+
+@article{zaharija_cognitive_2017,
+	title = {Cognitive {Agents} and {Learning} {Problems}},
+	volume = {9},
+	number = {3},
+	journal = {International Journal of Intelligent Systems and Applications},
+	author = {Zaharija, Goran and Mladenovi\'c, S\vasa and Duni\'c, Stefan},
+	year = {2017},
+	pages = {1--7}
+}
+
+@inproceedings{wagner_improving_2017,
+	title = {Improving local search in a minimum vertex cover solver for classes of networks},
+	booktitle = {{IEEE} {Congress} on {Evolutionary} {Computation} ({CEC})},
+	author = {Wagner, Markus and Friedrich, Tobias and Lindauer, Marius},
+	month = mar,
+	year = {2017}
+}
+
+@article{kanda_meta-learning_2016,
+	title = {Meta-learning to select the best meta-heuristic for the {Traveling} {Salesman} {Problem}: {A} comparison of meta-features},
+	volume = {205},
+	journal = {Neurocomputing},
+	author = {Kanda, Jorge and Carvalho, Andre de and Hruschka, Eduardo and Soares, Carlos and Brazdil, Pavel},
+	year = {2016},
+	pages = {393--406}
+}
+
+@article{chen_instance-specific_2017,
+	title = {Instance-specific algorithm selection via multi-output learning},
+	volume = {22},
+	number = {2},
+	journal = {Tsinghua Science and Technology},
+	author = {Chen, Kai and Dou, Yong and Lv, Qi and Liang, Zhengfa},
+	month = apr,
+	year = {2017},
+	pages = {210--217}
 }
