--- a/summary.tex
+++ b/summary.tex
@@ -565,6 +565,9 @@ neural networks, decision trees & offline & dynamic\\
 \citeA{geschwender_selecting_2013,geschwender_portfolio_2016} & constraints &
 instance features & algorithm & decision tree, neural network, naive Bayes & offline & static\\
 
+\citeA{nikolic_simple_2013} & SAT & instance features & algorithm & nearest
+neighbour & offline & static\\
+
 % 2014
 
 \citeA{amadini_portfolio_2014} & constraints & instance features & algorithm,
@@ -732,6 +735,22 @@ features & runtime performance & SVM, neural network & offline & static\\
 \citeA{dutt_plan_2016} & database query processing & instance features & resource
 allocation & offline & static\\
 
+\citeA{liberto_dash_2016} & MIP & instance features, search statistics &
+algorithm & clustering & online & static\\
+
+\citeA{lindauer_empirical_2016} & ASlib & instance features & resource
+allocation & nearest neighbour & offline & static\\
+
+\citeA{khalil_learning_2016} & MIP & instance features, search statistics &
+ranking & SVM & online & static\\
+
+\citeA{cenamor_ibacop_2016} & planning & instance features & resource allocation
+& classification, regression & offline & static\\
+
+\citeA{cunha_selecting_2016,cunha_recommending_2017,cunha_metalearning_2018} &
+recommender systems & instance features, probing & algorithm & classification &
+offline & static\\
+
 % 2017
 
 \citeA{misir_alors_2017} & ASlib & instance and algorithm features & ranking &
@@ -751,6 +770,24 @@ algorithm & pairwise classification, regression, clustering & offline & static\\
 
 \citeA{chen_instance-specific_2017} & SAT, MaxSAT & instance features &
 algorithm & multi-output learning & offline & static\\
+
+\citeA{khalil_learning_2017} & MIP & instance features, search statistics &
+algorithm & logistic regression & online & static\\
+
+\citeA{gnad_beyond_2017} & planning & probing & ranking & static rule & offline
+& static\\
+
+\citeA{fitzgerald_analysing_2017} & CSP, SAT, combinatorial auctions & past
+performance & algorithm & reinforcement learning & online & static\\
+
+\citeA{beham_instance-based_2017} & Quadratic Assignment Problem & instance
+features, probing & ranking & nearest neighbour & offline & static\\
+
+\citeA{selvaraj_pce-based_2017} & optical network design & instance features &
+algorithm & - & offline & static\\
+
+\citeA{cunha_metalearning_2017} & recommender systems & instance features &
+ranking & nearest neighbour, naive Bayes, trees & offline & static\\
 
 \end{longtable}
 \end{landscape}
