--- a/survey.bib
+++ b/survey.bib
@@ -2753,3 +2753,126 @@
 	year = {2017},
 	pages = {210--217}
 }
+
+@article{liberto_dash_2016,
+	title = {{DASH}: {Dynamic} {Approach} for {Switching} {Heuristics}},
+	volume = {248},
+	number = {3},
+	journal = {European Journal of Operational Research},
+	author = {Liberto, Giovanni Di and Kadioglu, Serdar and Leo, Kevin and Malitsky, Yuri},
+	year = {2016},
+	pages = {943--953}
+}
+
+@inproceedings{lindauer_empirical_2016,
+	title = {An {Empirical} {Study} of {Per}-instance {Algorithm} {Scheduling}},
+	booktitle = {{LION} 10},
+	author = {Lindauer, Marius and Bergdoll, Rolf-David and Hutter, Frank},
+	year = {2016},
+	pages = {253--259}
+}
+
+@inproceedings{khalil_learning_2017,
+	title = {Learning to {Run} {Heuristics} in {Tree} {Search}},
+	booktitle = {26th {International} {Joint} {Conference} on {Artificial} {Intelligence}},
+	author = {Khali, Elias B. and Dilkina, Bistra and Nemhauser, George L. and Ahmed, Shabbir and Shao, Yufen},
+	year = {2017},
+	pages = {659--666}
+}
+
+@inproceedings{khalil_learning_2016,
+	title = {Learning to {Branch} in {Mixed} {Integer} {Programming}},
+	booktitle = {30th {AAAI} {Conference} on {Artificial} {Intelligence}},
+	author = {Khalil, Elias B. and Bodic, Pierre Le and Song, Le and Nemhauser, George L. and Dilkina, Bistra},
+	year = {2016},
+	pages = {724--731}
+}
+
+@inproceedings{gnad_beyond_2017,
+	title = {Beyond {Forks}: {Finding} and {Ranking} {Star} {Factorings} for {Decoupled} {Search}},
+	booktitle = {26th {International} {Joint} {Conference} on {Artificial} {Intelligence}},
+	author = {Gnad, Daniel and Poser, Valerie and Hoffmann, Jörg},
+	year = {2017},
+	pages = {4310--4316}
+}
+
+@article{cenamor_ibacop_2016,
+	title = {The {IBaCoP} {Planning} {System}: {Instance}-based {Configured} {Portfolios}},
+	volume = {56},
+	issn = {1076-9757},
+	number = {1},
+	journal = {J. Artif. Int. Res.},
+	author = {Cenamor, Isabel and De La Rosa, Tomás and Fernández, Fernando},
+	year = {2016},
+	pages = {657--691}
+}
+
+@article{nikolic_simple_2013,
+	title = {Simple algorithm portfolio for {SAT}},
+	volume = {40},
+	number = {4},
+	journal = {Artificial Intelligence Review},
+	author = {Nikolić, Mladen and Marić, Filip and Janičić, Predrag},
+	year = {2013},
+	pages = {457--465}
+}
+
+@inproceedings{fitzgerald_analysing_2017,
+	title = {Analysing the effect of candidate selection and instance ordering in a realtime algorithm configuration system},
+	booktitle = {Symposium on {Applied} {Computing}},
+	author = {Fitzgerald, Tadhg and O'Sullivan, Barry},
+	year = {2017},
+	pages = {1003--1008}
+}
+
+@inproceedings{beham_instance-based_2017,
+	title = {Instance-based {Algorithm} {Selection} on {Quadratic} {Assignment} {Problem} {Landscapes}},
+	booktitle = {{GECCO}},
+	author = {Beham, Andreas and Affenzeller, Michael and Wagner, Stefan},
+	year = {2017},
+	pages = {1471--1478}
+}
+
+@article{selvaraj_pce-based_2017,
+	title = {{PCE}-{Based} {Path} {Computation} {Algorithm} {Selection} {Framework} for the next {Generation} {SDON}},
+	volume = {95},
+	number = {11},
+	journal = {Journal of Theoretical and Applied Information Technology},
+	author = {Selvaraj, P. and Nagarajan, V.},
+	year = {2017},
+	pages = {2370--2382}
+}
+
+@inproceedings{cunha_selecting_2016,
+	title = {Selecting {Collaborative} {Filtering} {Algorithms} {Using} {Metalearning}},
+	booktitle = {{ECML}/{PKDD}},
+	author = {Cunha, Tiago and Soares, Carlos and de Carvalho, André C. P. L. F.},
+	year = {2016},
+	pages = {393--409}
+}
+
+@inproceedings{cunha_metalearning_2017,
+	title = {Metalearning for {Context}-aware {Filtering}: {Selection} of {Tensor} {Factorization} {Algorithms}},
+	booktitle = {11th {ACM} {Conference} on {Recommender} {Systems}},
+	author = {Cunha, Tiago and Soares, Carlos and Carvalho, André C.P.L.F.},
+	year = {2017},
+	pages = {14--22}
+}
+
+@inproceedings{cunha_recommending_2017,
+	address = {Cham},
+	title = {Recommending {Collaborative} {Filtering} {Algorithms} {Using} {Subsampling} {Landmarkers}},
+	booktitle = {20th {International} {Conference} on {Discovery} {Science}},
+	author = {Cunha, Tiago and Soares, Carlos and de Carvalho, André C. P. L. F.},
+	year = {2017},
+	pages = {189--203}
+}
+
+@article{cunha_metalearning_2018,
+	title = {Metalearning and {Recommender} {Systems}: {A} literature review and empirical study on the algorithm selection problem for {Collaborative} {Filtering}},
+	volume = {423},
+	journal = {Information Sciences},
+	author = {Cunha, Tiago and Soares, Carlos and Carvalho, André C. P. L. F. de},
+	year = {2018},
+	pages = {128--144}
+}
