fix missing value

--- a/summary.tex
+++ b/summary.tex
@@ -733,7 +733,7 @@ regression & offline & static\\
 features & runtime performance & SVM, neural network & offline & static\\
 
 \citeA{dutt_plan_2016} & database query processing & instance features & resource
-allocation & offline & static\\
+allocation & optimisation & offline & static\\
 
 \citeA{liberto_dash_2016} & MIP & instance features, search statistics &
 algorithm & clustering & online & static\\
