--- a/summary.tex
+++ b/summary.tex
@@ -145,6 +145,9 @@ Bayesian model & offline and online & static\\
 \citeA{borrett_context_2001} & constraints & instance features, search
 statistics & redundant constraints to add & hand-crafted rules & offline & -\\
 
+\citeA{cowling_hyperheuristic_2001,cowling_parameter-free_2001} & scheduling &
+past performance & algorithm & reinforcement learning & online & static\\
+
 \citeA{little_capturing_2002} & logic puzzles & instance graph features &
 instance model transformations for runtime performance & nearest neighbour &
 offline &
@@ -500,6 +503,9 @@ performance & SVM & offline & static\\
 \citeA{morak_evaluating_2012} & ASP & instance features & algorithm &
 classification and regression & offline & static\\
 
+\citeA{burke_monte_2012} & scheduling & past performance & algorithm &
+reinforcement learning & offline & static\\
+
 % 2013
 
 \citeA{sabharwal_boosting_2013} & SAT & instance features & resource allocation
@@ -646,6 +652,9 @@ nearest neighbour & offline & static\\
 \citeA{shahriari_entropy_2014} & Bayesian Optimization & entropy & algorithm &
 multi-armed bandits & online & static\\
 
+\citeA{lopez-camacho_unified_2014} & bin packing & instance features & algorithm
+& nearest neighbour & online & static\\
+
 % 2015
 
 \citeA{tierney_algorithm_2015} & container premarshalling & instance features,
@@ -695,6 +704,9 @@ allocation & multi-armed bandits & online & static\\
 ranking & linear regression, nearest neighbour, regression trees, neural
 network, SVM & offline & static\\
 
+\citeA{yuen_sequential_2015,lou_sequential_2017} & black-box optimisation &
+instance features & algorithm & nearest neighbour & offline & static\\
+
 % 2016
 
 \citeA{palmieri_parallel_2016} & constraint programming & past performance &
@@ -729,8 +741,9 @@ random forest regression & online & static\\
 equations, FFT & instance features & runtime performance, algorithm & linear
 regression & offline & static\\
 
-\citeA{benatia_machine_2016} & sparse matrix-vector multiplication & instance
-features & runtime performance & SVM, neural network & offline & static\\
+\citeA{benatia_machine_2016,benatia_sparse_2016} & sparse matrix-vector
+multiplication & instance features & runtime performance & SVM, neural network &
+offline & static\\
 
 \citeA{dutt_plan_2016} & database query processing & instance features & resource
 allocation & optimisation & offline & static\\
@@ -788,6 +801,12 @@ algorithm & - & offline & static\\
 
 \citeA{cunha_metalearning_2017} & recommender systems & instance features &
 ranking & nearest neighbour, naive Bayes, trees & offline & static\\
+
+\citeA{stephenson_creating_2017} & Angry Birds & instance features & ranking &
+classification & offline & static\\
+
+\citeA{li_hyperheuristic_2017} & games & past performance & algorithm &
+reinforcement learning & online & static\\
 
 \end{longtable}
 \end{landscape}
