--- a/survey.bib
+++ b/survey.bib
@@ -2854,7 +2854,7 @@
 @inproceedings{cunha_metalearning_2017,
 	title = {Metalearning for {Context}-aware {Filtering}: {Selection} of {Tensor} {Factorization} {Algorithms}},
 	booktitle = {11th {ACM} {Conference} on {Recommender} {Systems}},
-	author = {Cunha, Tiago and Soares, Carlos and Carvalho, André C.P.L.F.},
+	author = {Cunha, Tiago and Soares, Carlos and de Carvalho, André C.P.L.F.},
 	year = {2017},
 	pages = {14--22}
 }
@@ -2872,7 +2872,93 @@
 	title = {Metalearning and {Recommender} {Systems}: {A} literature review and empirical study on the algorithm selection problem for {Collaborative} {Filtering}},
 	volume = {423},
 	journal = {Information Sciences},
-	author = {Cunha, Tiago and Soares, Carlos and Carvalho, André C. P. L. F. de},
+	author = {Cunha, Tiago and Soares, Carlos and de Carvalho, André C. P. L. F.},
 	year = {2018},
 	pages = {128--144}
+}
+
+@inproceedings{benatia_sparse_2016,
+	title = {Sparse {Matrix} {Format} {Selection} with {Multiclass} {SVM} for {SpMV} on {GPU}},
+	booktitle = {45th {International} {Conference} on {Parallel} {Processing} ({ICPP})},
+	author = {Benatia, Akrem and Ji, Weixing and Wang, Yizhuo and Shi, Feng},
+	month = aug,
+	year = {2016},
+	pages = {496--505}
+}
+
+@inproceedings{lou_sequential_2017,
+	address = {Cham},
+	title = {A {Sequential} {Learnable} {Evolutionary} {Algorithm} with a {Novel} {Knowledge} {Base} {Generation} {Method}},
+	booktitle = {Simulated {Evolution} and {Learning}},
+	publisher = {Springer International Publishing},
+	author = {Lou, Yang and Yuen, Shiu Yin},
+	year = {2017},
+	pages = {51--61}
+}
+
+@inproceedings{yuen_sequential_2015,
+	title = {Sequential {Learnable} {Evolutionary} {Algorithm}: {A} {Research} {Program}},
+	booktitle = {2015 {IEEE} {International} {Conference} on {Systems}, {Man}, and {Cybernetics}},
+	author = {Yuen, Shiu Yin and Zhang, Xin and Lou, Yang},
+	month = oct,
+	year = {2015},
+	pages = {2841--2848}
+}
+
+@inproceedings{stephenson_creating_2017,
+	title = {Creating a {Hyper}-{Agent} for {Solving} {Angry} {Birds} {Levels}},
+	booktitle = {{AAAI} {Conference} on {Artificial} {Intelligence} and {Interactive} {Digital} {Entertainment}},
+	author = {Stephenson, Matthew and Renz, Jochen},
+	year = {2017},
+	pages = {234--240}
+}
+
+@article{burke_monte_2012,
+	title = {Monte {Carlo} hyper-heuristics for examination timetabling},
+	volume = {196},
+	number = {1},
+	journal = {Annals of Operations Research},
+	author = {Burke, Edmund K. and Kendall, Graham and Mısır, Mustafa and Özcan, Ender},
+	month = jul,
+	year = {2012},
+	pages = {73--90}
+}
+
+@inproceedings{cowling_hyperheuristic_2001,
+	address = {Berlin, Heidelberg},
+	title = {A {Hyperheuristic} {Approach} to {Scheduling} a {Sales} {Summit}},
+	booktitle = {Practice and {Theory} of {Automated} {Timetabling} {III}},
+	author = {Cowling, Peter and Kendall, Graham and Soubeiga, Eric},
+	year = {2001},
+	pages = {176--190}
+}
+
+@inproceedings{cowling_parameter-free_2001,
+	title = {A {Parameter}-{Free} {Hyperheuristic} for {Scheduling} a {Sales} {Summit}},
+	booktitle = {4th {Metaheuristic} {International} {Conference}, {MIC} 2001},
+	author = {Cowling, Peter and Kendall, Graham and Soubeiga, Eric},
+	year = {2001},
+	pages = {127--131}
+}
+
+@article{li_hyperheuristic_2017,
+	title = {A {Hyperheuristic} {Methodology} to {Generate} {Adaptive} {Strategies} for {Games}},
+	volume = {9},
+	number = {1},
+	journal = {IEEE Transactions on Computational Intelligence and AI in Games},
+	author = {Li, Jiawei and Kendall, Graham},
+	month = mar,
+	year = {2017},
+	pages = {1--10}
+}
+
+@article{lopez-camacho_unified_2014,
+	title = {A {Unified} {Hyper}-heuristic {Framework} for {Solving} {Bin} {Packing} {Problems}},
+	volume = {41},
+	number = {15},
+	journal = {Expert Syst. Appl.},
+	author = {López-Camacho, Eunice and Terashima-Marin, Hugo and Ross, Peter and Ochoa, Gabriela},
+	month = nov,
+	year = {2014},
+	pages = {6876--6889}
 }
